--- a/demo/exec/CMakeLists.txt
+++ b/demo/exec/CMakeLists.txt
@@ -5,8 +5,8 @@ if(MNN_FREEIMAGE_VALID)
     include_directories("/usr/local/include")
     link_directories("/usr/local/lib")
     add_executable(pictureRotate.out pictureRotate.cpp)
-    add_executable(pictureTest.out pictureTest.cpp)
+    add_executable(pictureRecognition.out pictureRecognition.cpp)
     target_link_libraries(pictureRotate.out freeimage MNN)
-    target_link_libraries(pictureTest.out freeimage MNN)
+    target_link_libraries(pictureRecognition.out freeimage MNN)
 endif()
 
