--- a/demo/exec/CMakeLists.txt
+++ b/demo/exec/CMakeLists.txt
@@ -6,7 +6,9 @@ if(MNN_FREEIMAGE_VALID)
     link_directories("/usr/local/lib")
     add_executable(pictureRotate.out pictureRotate.cpp)
     add_executable(pictureRecognition.out pictureRecognition.cpp)
+    add_executable(multiPose.out multiPose.cpp)
     target_link_libraries(pictureRotate.out freeimage MNN)
     target_link_libraries(pictureRecognition.out freeimage MNN)
+    target_link_libraries(multiPose.out freeimage MNN)
 endif()
 
