CMAKE_SOURCE_DIR -> CMAKE_CURRENT_SOURCE_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,7 +375,7 @@ endif()
 
 # schema generator
 add_custom_target( MNN_SCHEMA ALL
-    COMMAND bash ${CMAKE_SOURCE_DIR}/schema/generate.sh -lazy
+    COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/schema/generate.sh -lazy
 )
 add_dependencies(MNN MNN_SCHEMA)
 
