beta 0.1.1.6 - add support for windows - fix bugs in converting dropout - fix bugs in post treat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ enable_language(ASM)
 
 option(MNN_USE_CPP11 "Enable MNN use c++11" ON)
 
-if(MNN_USE_CPP11)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+if (NOT MSVC)
+    if(MNN_USE_CPP11)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    else()
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+    endif()
 endif()
 
 # build options
@@ -127,16 +129,26 @@ endif()
 
 if(MNN_DEBUG)
     add_definitions(-DMNN_DEBUG)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG -g")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG -g")
+    if(MSVC)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG /DEBUG")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG /DEBUG")
+    else()
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG -g")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG -g")
+    endif()
 else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fPIC")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fPIC")
-    if(MNN_BUILD_FOR_ANDROID_COMMAND)
-        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -s -Wl,--gc-sections")
+    if (MSVC)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /O2")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O2")
+    else()
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fPIC")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fPIC")
+        if(MNN_BUILD_FOR_ANDROID_COMMAND)
+            set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -s -Wl,--gc-sections")
+        endif()
     endif()
 endif()
-if (MNN_HIDDEN)
+if ((MNN_HIDDEN) AND (NOT MSVC))
     add_definitions(-fvisibility=hidden)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility-inlines-hidden")
 endif()
@@ -339,7 +351,9 @@ if(MNN_BUILD_FOR_IOS OR MNN_METAL)
 endif()
 
 if(WIN32)
-    target_compile_definitions(MNN PRIVATE "-D_CRT_SECURE_NO_WARNINGS")
+    target_compile_definitions(MNN PRIVATE "-DBUILDING_DLL")
+    target_compile_definitions(MNN PUBLIC "-D_CRT_SECURE_NO_WARNINGS")
+    target_compile_options(MNN PUBLIC "/wd4244" "/wd4146" "/wd4018" "/wd4267" "/wd4996" "/wd4081")
 endif()
 
 if(SYSTEM.Android AND NOT MNN_BUILD_FOR_ANDROID_COMMAND)
@@ -375,9 +389,15 @@ if(MNN_BUILD_BENCHMARK)
 endif()
 
 # schema generator
-add_custom_target( MNN_SCHEMA ALL
-    COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/schema/generate.sh -lazy
-)
+if(WIN32)
+    add_custom_target( MNN_SCHEMA ALL
+        COMMAND powershell ${CMAKE_CURRENT_SOURCE_DIR}/schema/generate.ps1 -lazy
+    )
+else()
+    add_custom_target( MNN_SCHEMA ALL
+        COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/schema/generate.sh -lazy
+    )
+endif()
 add_dependencies(MNN MNN_SCHEMA)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/MNNDefine.h   DESTINATION include)
