--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,16 @@ option(MNN_BUILD_HARD "Build -mfloat-abi=hard or not" OFF)
 option(MNN_BUILD_SHARED_LIBS "MNN build shared or static lib" ON)
 option(MNN_FORBID_MULTI_THREAD "Disable Multi Thread" OFF)
 option(MNN_OPENMP "Enable Multiple Thread Linux|Android" ON)
+option(MNN_USE_THREAD_POOL "Use Multiple Thread by Self ThreadPool" OFF)
 option(MNN_USE_INT8_FAST "Enable Int8 Fast Optimization" OFF)
 option(MNN_SUPPORT_TRAIN "Enable Train Ops" OFF)
 option(MNN_BUILD_DEMO "Build demo/exec or not" OFF)
+option(MNN_BUILD_QUANTOOLS "Build Quantized Tools or not" OFF)
+
+if (MNN_USE_THREAD_POOL)
+    set(MNN_OPENMP OFF)
+    add_definitions(-DMNN_USE_THREAD_POOL)
+endif()
 
 if(MNN_FORBID_MULTI_THREAD)
     add_definitions(-DMNN_FORBIT_MULTI_THREADS)
@@ -189,7 +196,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "^Linux")
     endif()
 endif()
 
-if(PROCESSOR.x86)
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)")
     add_definitions(-DMNN_USE_SSE)
     set (MNN.Source_DIR ${MNN.Source_DIR} ${MNN.Path}/backend/cpu/sse)
 endif()
@@ -267,7 +274,11 @@ if(MNN_BUILD_FOR_IOS)
 else()
     if(MNN_BUILD_SHARED_LIBS)
         add_library(MNN SHARED ${GLOBAL.SOURCE} ${MNN.Source_Assembly})
-        install(TARGETS MNN LIBRARY DESTINATION lib)
+        if (WIN32)
+            install(TARGETS MNN RUNTIME DESTINATION lib)
+        else()
+            install(TARGETS MNN LIBRARY DESTINATION lib)
+        endif()
     else()
         add_library(MNN STATIC ${GLOBAL.SOURCE} ${MNN.Source_Assembly})
         install(TARGETS MNN ARCHIVE DESTINATION lib)
@@ -328,6 +339,10 @@ else()
             # Only works if the same flag is passed to the linker; use CMake 3.9+ otherwise (Intel, AppleClang)
             set_property(TARGET OpenMP::OpenMP_CXX
                 PROPERTY INTERFACE_LINK_LIBRARIES ${OpenMP_CXX_FLAGS} Threads::Threads)
+        endif()
+        if (WIN32)
+            set(OpenMP_C_FLAGS "/openmp ${OpenMP_C_FLAGS}")
+            set(OpenMP_CXX_FLAGS "/openmp ${OpenMP_CXX_FLAGS}")
         endif()
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
@@ -393,6 +408,9 @@ endif()
 
 if(MNN_BUILD_BENCHMARK)
     add_subdirectory(benchmark)
+endif()
+if(MNN_BUILD_QUANTOOLS)
+    add_subdirectory(tools/quantization)
 endif()
 
 # schema generator
