--- a/tools/converter/source/MNN/CMakeLists.txt
+++ b/tools/converter/source/MNN/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(MNN)
+project(mnn_bizcode)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
@@ -8,6 +8,6 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories(${CMAKE_SOURCE_DIR}/source/IR)
 include_directories(${CMAKE_SOURCE_DIR}/source/include)
 
-file(GLOB MNN_SRC ${CMAKE_SOURCE_DIR}/source/MNN/*)
+file(GLOB MNN_SRC ${CMAKE_SOURCE_DIR}/source/mnn/*)
 
-add_library(MNN SHARED ${MNN_SRC})
+add_library(mnn_bizcode SHARED ${MNN_SRC})
