beta 0.2.0.5 - CPU 	- add support for DepthToSpace & SpaceToDepth ops - OpenGL 	- add Android demo 	- add half / float runtime option 	- add support for ROIPooling, Squeeze 	- fix bugs in conv im2col - OpenCL 	- fix Concat, Eltwise, Reshape bugs - Tools 	- add KL threshold method in quantization tool 	- support optimization for graph with multiple rnn

--- a/demo/android/app/src/main/AndroidManifest.xml
+++ b/demo/android/app/src/main/AndroidManifest.xml
@@ -29,12 +29,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ImageActivity"></activity>
+        <activity android:name=".OpenGLTestActivity"></activity>
         <activity android:name=".PortraitActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
         </activity>
     </application>
 
