--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,14 +117,14 @@ if(SYSTEM.Linux)
 endif()
 
 if(WIN32)
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
-    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
-    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MT")
-    set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} /MT")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
+    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MD")
+    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MD")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MD")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MDd")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MD")
+    set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} /MD")
 	set(CMAKE_CXX_STANDARD 14)
 elseif(SYSTEM.Android OR SYSTEM.Linux)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fomit-frame-pointer -fstrict-aliasing -ffunction-sections -fdata-sections -ffast-math")
@@ -134,13 +134,13 @@ elseif()
 endif()
 
 if(MNN_DEBUG)
-    add_definitions(-DMNN_DEBUG)
+    add_definitions(-DMNN_DEBUG -DDEBUG)
     if(MSVC)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG /DEBUG")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG /DEBUG")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /DEBUG")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DEBUG")
     else()
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG -g")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG -g")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
     endif()
 else()
     if (MSVC)
@@ -195,7 +195,15 @@ endif()
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)")
     add_definitions(-DMNN_USE_SSE)
-    set (MNN.Source_DIR ${MNN.Source_DIR} ${MNN.Path}/backend/cpu/sse)
+    file(GLOB AVX_Source_Files ${MNN.Path}/backend/cpu/x86_x64/avx/*.cpp)
+    if(WIN32 OR MSVC)
+        set_source_files_properties(${AVX_Source_Files} PROPERTIES COMPILE_FLAGS /arch:AVX)
+    else()
+        set_source_files_properties(${AVX_Source_Files} PROPERTIES COMPILE_FLAGS -mavx)
+    endif()
+    set(MNN.Source_DIR ${MNN.Source_DIR} ${MNN.Path}/backend/cpu/x86_x64)
+    set(MNN.Source_DIR ${MNN.Source_DIR} ${MNN.Path}/backend/cpu/x86_x64/sse)
+    set(MNN.Source_DIR ${MNN.Source_DIR} ${MNN.Path}/backend/cpu/x86_x64/avx)
 endif()
 
 # *.c
@@ -292,34 +300,42 @@ if(SYSTEM.Linux)
     target_link_libraries(MNN pthread)
 endif()
 
-set(MNN_DEPEND MNN)
-if(NOT MNN_BUILD_SHARED_LIBS)
-    if (BUILD_IOS OR APPLE)
-        set(MNN_DEPEND -all_load, ${MNN_DEPEND}, -noall_load)
-    elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        set(MNN_DEPEND -Wl,--whole-archive ${MNN_DEPEND} -Wl,--no-whole-archive)
-    endif()
-endif()
-
 if(MNN_VULKAN)
-    set(MNN_DEPEND ${MNN_DEPEND} MNN_Vulkan)
+    list(APPEND MNN_DEPEND MNN_Vulkan)
     add_subdirectory(${MNN.Path}/backend/vulkan)
     message(STATUS "[*] linking MNN with Vulkan done")
 endif()
 if(MNN_OPENGL)
-    set(MNN_DEPEND ${MNN_DEPEND} MNN_GL)
+    list(APPEND MNN_DEPEND MNN_GL)
     add_subdirectory(${MNN.Path}/backend/opengl)
     message(STATUS "[*] linking MNN with OpenGL done")
 endif()
 if(MNN_OPENCL)
-    set(MNN_DEPEND ${MNN_DEPEND} MNN_CL)
+    list(APPEND MNN_DEPEND MNN_CL)
     add_subdirectory(${MNN.Path}/backend/opencl)
     message(STATUS "[*] linking MNN with OpenCL done")
 endif()
 if (MNN_ARM82)
-    set(MNN_DEPEND ${MNN_DEPEND} MNN_Arm82)
+    list(APPEND MNN_DEPEND MNN_Arm82)
     add_subdirectory(${MNN.Path}/backend/arm82)
     message(STATUS "[*] linking MNN with ARM 82 done")
+endif()
+
+if (MSVC OR WIN32)
+    target_link_options(MNN PRIVATE "/IGNORE:4049,4217")
+    foreach(DEPEND ${MNN_DEPEND})
+        target_link_options(MNN PRIVATE /WHOLEARCHIVE:$<TARGET_FILE:${DEPEND}>)
+        target_link_libraries(MNN PRIVATE ${DEPEND})
+    endforeach()
+    set(MNN_DEPEND MNN)
+elseif (NOT MNN_BUILD_SHARED_LIBS)
+     if (BUILD_IOS OR APPLE)
+        set(MNN_DEPEND -all_load, MNN, -noall_load ${MNN_DEPEND})
+    elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(MNN_DEPEND -Wl,--whole-archive MNN -Wl,--no-whole-archive ${MNN_DEPEND})
+    endif()
+else()
+    set(MNN_DEPEND MNN ${MNN_DEPEND})
 endif()
 
 if (BUILD_IOS OR APPLE)
@@ -367,7 +383,7 @@ endif()
 if(WIN32)
     target_compile_definitions(MNN PRIVATE "-DBUILDING_DLL")
     target_compile_definitions(MNN PUBLIC "-D_CRT_SECURE_NO_WARNINGS")
-    target_compile_options(MNN PUBLIC "/wd4244" "/wd4146" "/wd4018" "/wd4267" "/wd4996" "/wd4081")
+    target_compile_options(MNN PUBLIC "/wd4244" "/wd4146" "/wd4018" "/wd4267" "/wd4996" "/wd4081" "/wd4251")
 endif()
 
 if(SYSTEM.Android AND NOT MNN_BUILD_FOR_ANDROID_COMMAND)
