avoid protobuf error when compiled with protobuf 3.9.1

--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -99,4 +99,4 @@ else()
     target_link_libraries(MNNConvert tensorflow caffe onnx tflite)
 endif()
 
-target_link_libraries(MNNConvert mnn_bizcode optimizer COMMON_LIB ${Protobuf_LIBRARY})
+target_link_libraries(MNNConvert mnn_bizcode optimizer COMMON_LIB ${Protobuf_LIBRARY} pthread)
