Provide placeholder values for both Android NATIVE_* variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,6 +280,12 @@ include_directories(${MNN.Source_DIR})
 include_directories("./")
 
 if(SYSTEM.Android AND NOT MNN_BUILD_FOR_ANDROID_COMMAND)
+    if(NOT DEFINED NATIVE_LIBRARY_OUTPUT)
+      set(NATIVE_LIBRARY_OUTPUT ${CMAKE_CURRENT_BINARY_DIR})
+      message(STATUS "Using default Android Build Library Directory: ${NATIVE_LIBRARY_OUTPUT}/MNN")
+    else()
+      message(STATUS "Using Android Build Library Directory: ${NATIVE_LIBRARY_OUTPUT}")
+    endif()
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${NATIVE_LIBRARY_OUTPUT}/${ANDROID_ABI})
     add_definitions(-DMNN_USE_LOGCAT)
 endif()
