--- a/.travis.yml
+++ b/.travis.yml
@@ -62,8 +62,5 @@ matrix:
         - export ANDROID_NDK=$ANDROID_HOME/ndk-bundle
       script:
         - cd project/android/
-        - mkdir build_32
-        - cd build_32
-        - /usr/local/android-sdk/cmake/3.10.2.4988404/bin/cmake ../../../ -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake -DCMAKE_BUILD_TYPE=Release -DANDROID_ABI="armeabi-v7a" -DANDROID_STL=c++_static -DCMAKE_BUILD_TYPE=Release -DANDROID_NATIVE_API_LEVEL=android-21 -DANDROID_TOOLCHAIN=clang -DMNN_BUILD_FOR_ANDROID_COMMAND=true -DMNN_DEBUG=false -DNATIVE_LIBRARY_OUTPUT=.
-        - make -j4
+        - ./gradlew bintrayUpload -PbintrayKey=${BINTRAY_DEPLOY_TOKEN}
       name: "Android | AArch32"
