--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -22,6 +22,7 @@ if (WIN32)
         CMAKE_C_FLAGS_MINSIZEREL CMAKE_C_FLAGS_RELWITHDEBINFO
         CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE
         CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELWITHDEBINFO)
+        set(MNN_BUILD_SHARED_LIBS OFF)
         if (MNN_BUILD_SHARED_LIBS)
             if(${flag_var} MATCHES "/MT")
                 string(REGEX REPLACE "/MT" "/MD" ${flag_var} "${${flag_var}}")
