Fix Linux Detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,7 @@ if(WIN32)
             endif()
         endif ()
     endforeach()
-elseif(CMAKE_SYSTEM_NAME MATCHES "^Android" OR CMAKE_SYSTEM_NAME MATCHES "^Linux")
+elseif(CMAKE_SYSTEM_NAME MATCHES "^Android" OR (UNIX AND NOT APPLE))
     add_definitions(-fPIC)
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES "^Android")
@@ -398,10 +398,10 @@ if(APPLE)
     ENDIF()
 endif()
 
-if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
-  target_link_libraries(MNN PUBLIC pthread)
-elseif(CMAKE_SYSTEM_NAME MATCHES "^Android")
+if(CMAKE_SYSTEM_NAME MATCHES "^Android")
   target_link_libraries(MNN PUBLIC log android m)
+elseif(UNIX AND NOT APPLE)
+  target_link_libraries(MNN PUBLIC pthread)
 else()
 endif()
 if(MNN_OPENGL)
