Fix Unix Environment detection and OpenCL Linking (#554)
* Close #551

* Fix Linux Detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,7 @@ if(WIN32)
             endif()
         endif ()
     endforeach()
-elseif(CMAKE_SYSTEM_NAME MATCHES "^Android" OR CMAKE_SYSTEM_NAME MATCHES "^Linux")
+elseif(CMAKE_SYSTEM_NAME MATCHES "^Android" OR (UNIX AND NOT APPLE))
     add_definitions(-fPIC)
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES "^Android")
@@ -396,25 +396,12 @@ if(APPLE)
       find_library(METAL Metal REQUIRED)
       target_link_libraries(MNN PUBLIC ${METAL})
     ENDIF()
-    IF(MNN_OPENCL)
-      IF(APPLE)
-        find_library(OPENCL OpenCL REQUIRED)
-        target_link_libraries(MNN PUBLIC ${OPENCL})
-      ELSEIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
-        find_package(OpenCL REQUIRED)
-        target_link_libraries(MNN PRIVATE ${OpenCL_LIBRARIES})
-      ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Android")
-          add_definitions(-DMNN_USE_OPENCL_WRAPPER)
-          #add_definitions(-DENABLE_OPENCL_TURNING_PROFILER)
-          #add_definitions(-DLOG_VERBOSE)
-      ENDIF()
-    ENDIF()
 endif()
 
-if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
-  target_link_libraries(MNN PUBLIC pthread)
-elseif(CMAKE_SYSTEM_NAME MATCHES "^Android")
+if(CMAKE_SYSTEM_NAME MATCHES "^Android")
   target_link_libraries(MNN PUBLIC log android m)
+elseif(UNIX AND NOT APPLE)
+  target_link_libraries(MNN PUBLIC pthread)
 else()
 endif()
 if(MNN_OPENGL)
@@ -462,6 +449,30 @@ if (NOT MNN_BUILD_SHARED_LIBS)
         set(MNN_DEPEND -Wl,--whole-archive ${MNN_DEPEND} -Wl,--no-whole-archive)
     endif()
 endif()
+
+# OpenCL Library
+IF(MNN_OPENCL)
+  IF(APPLE)
+    find_library(OPENCL OpenCL REQUIRED)
+    SET(MNN_OCL_LIBS ${OPENCL})
+  ELSEIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Android")
+    find_package(OpenCL REQUIRED)
+    SET(MNN_OCL_LIBS ${OpenCL_LIBRARIES})
+  ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Android")
+      add_definitions(-DMNN_USE_OPENCL_WRAPPER)
+      #add_definitions(-DENABLE_OPENCL_TURNING_PROFILER)
+      #add_definitions(-DLOG_VERBOSE)
+  ENDIF()
+  IF(MNN_OCL_LIBS)
+    IF(MNN_SEP_BUILD)
+      target_link_libraries(MNN_CL PUBLIC ${MNN_OCL_LIBS})
+    ELSE()
+      target_link_libraries(MNN PUBLIC ${MNN_OCL_LIBS})
+    ENDIF()
+  ENDIF()
+ENDIF()
+
+# OpenMP
 if (NOT APPLE)
   if(MNN_OPENMP)
       message(STATUS "[*] Checking OpenMP")
@@ -485,7 +496,7 @@ if (NOT APPLE)
           set(OpenMP_C_FLAGS "/openmp ${OpenMP_C_FLAGS}")
           set(OpenMP_CXX_FLAGS "/openmp ${OpenMP_CXX_FLAGS}")
       endif()
-      FOREACH(TARGET ${MNN_TARGETS})
+      FOREACH(TARGET ${MNN_DEPS})
        target_link_libraries(${TARGET} PUBLIC ${OpenMP_CXX_LIBRARIES})
        IF(WIN32)
             target_compile_options(${TARGET} PUBLIC /openmp ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
