--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -518,7 +518,7 @@ list(APPEND MNN_TARGETS MNN)
           target_compile_options(${TARGET} PRIVATE -fvisibility-inlines-hidden -fvisibility=hidden)
       endif()
     else()
-      add_compile_definitions("-D_CRT_SECURE_NO_WARNINGS")
+      add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
       add_compile_options("/wd4267" "/wd4018" "/wd4251" "/wd4996" "/wd4244" "/wd4146" "/wd4129" "/wd4305")
     endif()
   ENDFOREACH()
