Fix Android Demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -381,6 +381,9 @@ IF(MNN_BUILD_SHARED_LIBS)
 ELSE()
   add_library(MNN STATIC ${CMAKE_CURRENT_LIST_DIR}/cmake/dummy.cpp ${MNN_OBJECTS_TO_LINK} ${MNN_PUB_HDRS} ${MNN_EXPR_PUB_HDRS})
 ENDIF()
+
+set_target_properties(MNN PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}/include/")
+
 if(APPLE)
     IF(MNN_AAPL_FMWK)
       set_target_properties(MNN PROPERTIES FRAMEWORK TRUE)
