--- a/.travis.yml
+++ b/.travis.yml
@@ -165,7 +165,10 @@ matrix:
         - choco install ninja
       script:
         - mkdir build && cd build
-        - ./ciscripts/Windows/X64.bat
+        - call "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/vcvars32.bat"
+        - cmake -G "Ninja" -DCMAKE_BUILD_TYPE=Release ..
+        - ninja
+      name: "Window
       name: "Windows | x64 CPU"
       env:
         - MNNCITARGET=WINX64
@@ -178,7 +181,9 @@ matrix:
         - choco install ninja
       script:
         - mkdir build && cd build
-        - ./ciscripts/Windows/X86.bat
+        - call "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build/vcvars64.bat"
+        - cmake -G "Ninja" -DCMAKE_BUILD_TYPE=Release ..
+        - ninja
       name: "Windows | x86 CPU"
       env:
         - MNNCITARGET=WINX86
