--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -514,7 +514,7 @@ endif()
 list(APPEND MNN_TARGETS MNN)
   FOREACH(TARGET ${MNN_TARGETS})
     add_dependencies(${TARGET} MNN_SCHEMA_GEN)
-    IF((NOT MSVC) AND (NOT WIN32))
+    IF(NOT MSVC)
       target_compile_options(${TARGET} PUBLIC -fomit-frame-pointer -fstrict-aliasing -ffunction-sections -fdata-sections -ffast-math -fno-rtti)
       target_compile_options(${TARGET} PRIVATE -fno-exceptions)
       if(MNN_HIDDEN)
