--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -514,7 +514,7 @@ endif()
 list(APPEND MNN_TARGETS MNN)
   FOREACH(TARGET ${MNN_TARGETS})
     add_dependencies(${TARGET} MNN_SCHEMA_GEN)
-    IF((NOT MSVC) AND (NOT WIN32))
+    IF(NOT MSVC)
       target_compile_options(${TARGET} PUBLIC -fomit-frame-pointer -fstrict-aliasing -ffunction-sections -fdata-sections -ffast-math -fno-rtti)
       target_compile_options(${TARGET} PRIVATE -fno-exceptions)
       if(MNN_HIDDEN)
@@ -533,7 +533,7 @@ include(${CMAKE_CURRENT_LIST_DIR}/test/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/benchmark/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/quantization/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/evaluation/CMakeLists.txt)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools/converter)
+include(${CMAKE_CURRENT_LIST_DIR}/tools/converter/CMakeLists.txt)
 
 # Install headers
 IF(CMAKE_SYSTEM_NAME MATCHES "^Android" AND NOT MNN_BUILD_FOR_ANDROID_COMMAND)
