--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,9 +176,18 @@ elseif(CMAKE_SYSTEM_NAME MATCHES "^Android" OR (UNIX AND NOT APPLE))
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES "^Android")
     add_definitions(-DMNN_BUILD_FOR_ANDROID)
-    if(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
-        add_definitions(-mfloat-abi=softfp -mfpu=neon)
-    endif()
+endif()
+
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
+  if(CMAKE_SYSTEM_NAME MATCHES "^Android")
+    add_definitions(-mfloat-abi=softfp -mfpu=neon)
+  else()
+    IF(MNN_BUILD_HARD)
+      add_definitions(-mfloat-abi=hard)
+    ELSE()
+      add_definitions(-mfloat-abi=softfp)
+    ENDIF()
+  endif()
 endif()
 
 
