Fix OpenCL linking logic when MNN_BUILD_SHARED_LIBS=OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -478,7 +478,7 @@ IF(MNN_OPENCL)
       #add_definitions(-DLOG_VERBOSE)
   ENDIF()
   IF(MNN_OCL_LIBS)
-    IF(MNN_SEP_BUILD)
+    IF(MNN_SEP_BUILD AND MNN_BUILD_SHARED_LIBS)
       target_link_libraries(MNN_CL PUBLIC ${MNN_OCL_LIBS})
     ELSE()
       target_link_libraries(MNN PUBLIC ${MNN_OCL_LIBS})
