--- a/.gitignore
+++ b/.gitignore
@@ -352,7 +352,7 @@ source/backend/opencl/execution/cl/opencl_program.cc
 # FIXME(haijing): MTL issues.....
 # source/backend/metal/MetalOPRegister.mm
 source/backend/opengl/AllShader.cpp
-include/MNN/backend/opengl/shaders/AllShader.h
+include/MNN/backend/opengl/shaders/AllShader.hpp
 source/backend/vulkan/compiler/AllShader.cpp
 include/MNN/backend/vulkan/shaders/AllShader.h
 .idea
