--- a/source/backend/opengl/CMakeLists.txt
+++ b/source/backend/opengl/CMakeLists.txt
@@ -1,18 +1,14 @@
 if(MNN_OPENGL)
   FILE(GLOB_RECURSE MNN_OpenGL_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
-  option(MNN_OPENGL_REGEN "Regenerate OpenGL Shaders." OFF)
-
-  IF(MNN_OPENGL_REGEN)
-    add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp"
-      COMMAND ${PYTHON_EXECUTABLE}
-      "${CMAKE_CURRENT_LIST_DIR}/makeshader.py"
-      "${CMAKE_CURRENT_LIST_DIR}/glsl/"
-      "${CMAKE_SOURCE_DIR}/include/MNN/backend/opengl/shaders/AllShader.hpp"
-      "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp"
-      COMMENT "OpenGL Code Generation"
-    )
-    add_custom_target (MNNOpenGLCodeGen DEPENDS "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp")
-  ENDIF()
+  add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp"
+    COMMAND ${PYTHON_EXECUTABLE}
+    "${CMAKE_CURRENT_LIST_DIR}/makeshader.py"
+    "${CMAKE_CURRENT_LIST_DIR}/glsl/"
+    "${CMAKE_CURRENT_LIST_DIR}/AllShader.hpp"
+    "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp"
+    COMMENT "OpenGL Code Generation"
+  )
+  add_custom_target (MNNOpenGLCodeGen DEPENDS "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp")
 
   add_library(MNNOpenGL OBJECT ${MNN_OpenGL_SRC} "${CMAKE_CURRENT_LIST_DIR}/AllShader.cpp")
   list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNNOpenGL>)
